# robotic-foundation-model-tests

./: .gitignore  CLAUDE.md  LICENSE  commands  policy_commands  test_camera_resolution.py  test_camera_warmup.py  test_cv2_cam.py  test_pi05_forward_windows.py  test_pi05_load_windows.py
lerobot_policy_single_action/: pyproject.toml
lerobot_policy_single_action/lerobot_policy_single_action/: __init__.py  configuration_single_action.py  modeling_single_action.py  processor_single_action.py
object_relocator/: __init__.py  __main__.py  calibrate.py  detection.py  motor_utils.py  relocator.py
scripts/: convert_to_vlm_dataset.py  finetune_cosmos_reason2.py  inference_cosmos_reason2.py  run_single_action_record.py  test_elbow_range.py  test_joint_range.py
scripts/streaming/: README.md  __init__.py  record_continuous.py  sequencer.py  verify_dataset.py
